Fix jsdialog spinfield jumping on hover
Visible when using the following core change:
https://gerrit.libreoffice.org/c/core/+/142974

Note: no need to have generic CSS rules for spinfields
only for the sidebar

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -430,6 +430,11 @@ input[type='checkbox']:checked.autofilter, .jsdialog input[type='checkbox']:chec
 }
 /* spinfield */
 
+.spinfieldcontainer input {
+	border: 1px solid var(--color-border-dark);
+	border-radius: var(--border-radius);
+}
+
 .spinfieldcontainer input:hover {
 	border: 1px solid var(--color-border-darker);
 	color: var(--color-text-darker);
